added functionality to admin buttons in header

--- a/src/bugReport.html
+++ b/src/bugReport.html
@@ -10,9 +10,9 @@
         <div class="Header"> <!--This is the blue header section with the Vaccino title and text about the government-->
           <p>Ministry of Health</p> <!--Align left-->
           <br>
-          <button type="button" id="signout" onclick="window.location.replace('index.html')">Sign Out</button>
+          <button type="button" id="signout">Sign Out</button>
           <br>        <br>        <br>        <br>        <br>
-          <button type="button" id="homebutton" onclick="window.location.replace('userHome.html')">Home</button>
+          <button type="button" id="homebutton">Home</button>
           <h1>Vaccino - Report Issue</h1> <!--Align center-->
           <h3>The official New Zealand Government website<br>
             for vaccine and innoculation information</h3> <!--Align Under Vaccino-->
@@ -23,7 +23,7 @@
           <br>
           <button>Submit</button>
         </div> 
-    
+        <script src="userPages.js"></script>
         </body>
 </html>
 
