--- a/src/admin.html
+++ b/src/admin.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html>
   <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="admin.css">
     <meta charset="UTF-8">
     <title>Vaccino - Admin Home</title>
   </head>
@@ -36,6 +37,7 @@
         </table>
         </div>
       </div>
+      <script src="adminPages.js"></script>
   </body>
 
 </html>
