--- a/src/adminalert.html
+++ b/src/adminalert.html
@@ -3,6 +3,7 @@
 <html>
   <!--<link rel="stylesheet" href="index.css">-->
   <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="admin.css">
     <meta charset="UTF-8">
     <title>Vaccino - Admin Manage Alerts</title>
   </head>
@@ -10,9 +11,9 @@
     <div class="Header"> <!--This is the blue header section with the Vaccino title and text about the government-->
         <p>Ministry of Health</p> <!--Align left-->
         <br>
-        <button type="button" id="signout" onclick="window.location.replace('index.html')">Sign Out</button>
+        <button type="button" id="signout">Sign Out</button>
         <br>        <br>        <br>        <br>        <br>
-        <button type="button" id="homebutton" onclick="window.location.replace('admin.html')">Home</button>
+        <button type="button" id="homebutton">Home</button>
         <h1>Vaccino - Alert Levels</h1> <!--Align center-->
         <h3>The official New Zealand Government website<br>
           for vaccine and innoculation information</h3> <!--Align Under Vaccino-->
@@ -54,6 +55,7 @@
             }
           </script>
           </div>
+          <script src="adminPages.js"></script>
     </body>
 
     <script src="adminalert.js"></script>
