--- a/src/adminbugreports.html
+++ b/src/adminbugreports.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html>
   <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="admin.css">
     <meta charset="UTF-8">
     <title>Vaccino - Admin Bug Reports</title>
   </head>
@@ -9,9 +10,8 @@
     <div class="Header"> <!--This is the blue header section with the Vaccino title and text about the government-->
         <p>Ministry of Health</p> <!--Align left-->
         <br>
-        <button type="button" id="signout" onclick="window.location.replace('index.html')">Sign Out</button>
-        <br>        <br>        <br>        <br>        <br>
-        <button type="button" id="homebutton" onclick="window.location.replace('admin.html')">Home</button>
+        <button type="button" id="signout">Sign Out</button>
+        <button type="button" id="homebutton">Home</button>
         <h1>Vaccino - Bug Reports</h1> <!--Align center-->
         <h3>The official New Zealand Government website<br>
           for vaccine and innoculation information</h3> <!--Align Under Vaccino-->
@@ -20,5 +20,6 @@
           <input type="checkbox"></input> <!--JavaScript based-->
             <button type="button" id="resolveButton">Resolve</button> <!--This needs to only occur if a user has submitted a bug report.-->
         </div>
+        <script src="adminPages.js"></script>
     </body>
 </html>
