--- a/src/admineditprofile.html
+++ b/src/admineditprofile.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html>
   <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="admin.css">
     <meta charset="UTF-8">
     <title>Vaccino - Manage Profile</title>
   </head>
@@ -9,9 +10,9 @@
     <div class="Header"> <!--This is the blue header section with the Vaccino title and text about the government-->
         <p>Ministry of Health</p> <!--Align left-->
         <br>
-        <button type="button" id="signout" onclick="window.location.replace('index.html')">Sign Out</button>
+        <button type="button" id="signout">Sign Out</button>
         <br>        <br>        <br>        <br>        <br>
-        <button type="button" id="homebutton" onclick="window.location.replace('admin.html')">Home</button>
+        <button type="button" id="homebutton">Home</button>
         <h1>Vaccino - Manage Profile</h1> <!--Align center-->
         <h3>The official New Zealand Government website<br>
           for vaccine and innoculation information</h3> <!--Align Under Vaccino-->
@@ -43,5 +44,6 @@
         </div>
       </div>
       </div>
+      <script src="adminPages.js"></script>
     </body>
 </html>
