--- a/src/adminrecords.html
+++ b/src/adminrecords.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html>
   <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="admin.css">
     <meta charset="UTF-8">
     <title>Vaccino - Admin Manage Records</title>
   </head>
@@ -9,9 +10,9 @@
     <div class="Header"> <!--This is the blue header section with the Vaccino title and text about the government-->
         <p>Ministry of Health</p> <!--Align left-->
         <br>
-        <button type="button" id="signout" onclick="window.location.replace('index.html')">Sign Out</button>
+        <button type="button" id="signout">Sign Out</button>
         <br>        <br>        <br>        <br>        <br>
-        <button type="button" id="homebutton" onclick="window.location.replace('admin.html')">Home</button>
+        <button type="button" id="homebutton">Home</button>
         <h1>Vaccino</h1> <!--Align center-->
         <h3>The official New Zealand Government website<br>
           for vaccine and innoculation information</h3> <!--Align Under Vaccino-->
@@ -26,5 +27,6 @@
           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           <button type="button" class="adminButton2">View Vaccine Certificates</button> <!---->
         </div>
+        <script src="adminPages.js"></script>
     </body>
 </html>
