Fixed the covid cases error

--- a/src/testResults.html
+++ b/src/testResults.html
@@ -17,6 +17,7 @@
         </div> <!--End of blue header section-->
           <!--need to sort out the table here-->
          <div id ="table"></div>
+         <button type="button" id="upload">Upload RAT Result</button>
         <script src="userPages.js"></script>
       </body>
 </html>
