working on test results

--- a/src/admin.html
+++ b/src/admin.html
@@ -17,13 +17,13 @@
     </div> <!--End of blue header section-->
     <div id="adminhomedisplay">
     <div id="adminhomebuttons">
-        <button type="button" class="adminButton" onclick="window.location.replace('admineditprofile.html')">Manage User Profiles</button> <!---->
+        <button type="button" class="adminButton" id="profile">Manage User Profiles</button> <!---->
         <br>        <br>
-        <button type="button" class="adminButton" onclick="window.location.replace('adminbugreports.html')">Resolve Bug Reports</button> <!---->
+        <button type="button" class="adminButton" id="bugReports">Resolve Bug Reports</button> <!---->
         <br>        <br>
-        <button type="button" class="adminButton" onclick="window.location.replace('adminalert.html')">Manage Alert Levels</button> <!---->
+        <button type="button" class="adminButton" id="alert">Manage Alert Levels</button> <!---->
         <br>        <br>
-        <button type="button" class="adminButton" onclick="window.location.replace('admincases.html')">Manage No. of Cases</button> <!---->
+        <button type="button" class="adminButton" id="cases">Manage No. of Cases</button> <!---->
       </div>
         <div id="adminhomemessages">
         <table id="adminmessagestable">
