--- a/src/admincases.html
+++ b/src/admincases.html
@@ -19,7 +19,28 @@
         </div> <!--End of blue header section-->
         <div id="admincases">
           <p>Current number of cases: </p> <!--Number of cases goes here from system file-->
-          <div id="CurrentCases"></div>
+        <div id="CurrentCases"></div>
+        <div id="testing"></div>
+        <script>
+            fetch('src/covidnodata.json')
+            .then(function (response) {
+                return response.json();
+            })
+            .then(function (data) {
+                appendData2(data);
+            })
+            .catch(function (err) {
+                console.log('error: ' + err);
+            });
+        function appendData2(data) {
+            var mainContainer = document.getElementById("CurrentCases");
+            for (var i = 0; i < data.length; i++) {
+                var div = document.createElement("div");
+                div.innerHTML = data[i].covidNo;
+                mainContainer.appendChild(div);
+            }
+          }
+        </script>
         <br>
           <input placeholder="1000" id="casesInput" required></input> <br><br>
           <button type="button" id="changeCases">Submit</button> <!--Needs to link to the system file to change-->
