--- a/src/adminalert.html
+++ b/src/adminalert.html
@@ -19,8 +19,8 @@
           for vaccine and innoculation information</h3> <!--Align Under Vaccino-->
         </div> <!--End of blue header section-->
         <div id="adminalert">
-            <button type="button" id="changeAlert">Change Alert Level</button> <!---->
-            <l>Current Alert Level: </l> <!--Will show the system's current default alert level via image-->
+            <button type="button" id="changeAlert">Change Alert Level</button> <!----> <br>
+            <p id="alertleveltext">Current Alert Level: </p> <!--Will show the system's current default alert level via image-->
             <div id="TrafficChange"></div>
             <!--These functions are used to help display the current alert level-->
             <div id="testing"></div>
