--- a/src/admineditprofile.html
+++ b/src/admineditprofile.html
@@ -20,8 +20,8 @@
         <div id="adminprofile">
           <l>Please enter user's NHI number: </l>
           <input placeholder="1122334" ></input> <!---->
-          <button type="button" id="issueQR">Search</button> <!---->
-          <button type="button" id="issueQR">Issue QR Code</button> <!---->
+          <button type="button" id="editProfileButton">Search</button> <!---->
+          <button type="button" id="editProfileButton">Issue QR Code</button> <!---->
           <br><br>
         <div id="adminprofile2">
           <div>
@@ -34,13 +34,13 @@
           <p>Date of Birth: </p>
           <p>Mobile Number: </p>
           <p>Email: </p>
-          <p>Update Health Documents.</p>
-          <p>Update Vaccination/Test Records.</p>
+          <a href="adminrecords.html">Update Test Results and Vaccine Records</a><!--If needed, in order to style all of these p elements I can give them and id for you to easily call.-->
+        </div>
         </div>
         <div>
-          <button type="button" id="editProfile">Edit</button> <!---->
-          <button type="button" id="approveChanges">Approve Changes</button> <!---->
-          <button type="button" id="deleteUser">Delete User</button> <!---->
+          <button type="button" id="editProfileButton">Edit</button> <!---->
+          <button type="button" id="editProfileButton">Approve Changes</button> <!---->
+          <button type="button" id="editProfileButton">Delete User</button> <!---->
         </div>
       </div>
       </div>
