--- a/src/userHome.html
+++ b/src/userHome.html
@@ -27,6 +27,7 @@
             <div id="TrafficChange"></div>
             <!--These functions are used to help display the current alert level-->
           <script>
+            //Fetches the data from the file:
                 fetch('alertleveldata.json')
                 .then(function (response) {
                     return response.json();
@@ -37,6 +38,7 @@
                 .catch(function (err) {
                     console.log('error: ' + err);
                 });
+                //Outputs the data for the file depending on the conditional number:
             function appendData2(data) {
                 var mainContainer = document.getElementById("TrafficChange");
                 var trafficdata = data[0].trafficLight;
@@ -59,8 +61,9 @@
           </script>
           <div class="numbers">
             <p id="item2">Current number of<br>
-              Covid-19 cases: </p><!--We need to figure out how we want to display the numbers in a way that an admin could change them, using JS perhaps?-->
+              Covid-19 cases: </p>
               <div id="covidNum"></div>
+              <!--/The following functions are used to get the current number of cases.-->
               <script>
                 fetch('covidnodata.json')
                     .then(function (response) {
