--- a/src/adminrecords.html
+++ b/src/adminrecords.html
@@ -27,6 +27,11 @@
           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           <button type="button" class="adminButton2">View Vaccine Certificates</button> <!---->
         </div>
+        <div id="adminrecords3">
+          <button type="button" class="adminButton3" onclick="window.location.replace('adminAddTests.html')">Add Test</button> <!---->
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <button type="button" class="adminButton2">View Vaccine Certificates</button> <!---->
+        </div>
         <script src="adminPages.js"></script>
     </body>
 </html>
