Admin can add vaccine records

--- a/src/adminrecords.html
+++ b/src/adminrecords.html
@@ -18,7 +18,7 @@
           for vaccine and innoculation information</h3> <!--Align Under Vaccino-->
         </div> <!--End of blue header section-->
         <div id="adminrecords1">
-            <button type="button" class="adminButton2">Change/Upload Vaccine Records</button> <!---->
+            <button type="button" class="adminButton2" onclick="window.location.replace('adminAddVaccine.html')">Change/Upload Vaccine Records</button> <!---->
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <button type="button" class="adminButton2">View Vaccine Records</button> <!---->
         </div>
