Finished vax and test functions in full

--- a/src/vaccineRecords.html
+++ b/src/vaccineRecords.html
@@ -3,10 +3,7 @@
     <head>
       <link rel="stylesheet" href="userPages.css">
         <meta charset="UTF-8">
-          <!-- https://sheetjs.com/ -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
         <title>Vaccino - Vaccine Records</title>
-        <input type="file" id="demoA" accept=".xls,.xlsx"/>
       </head>
       <body>
         <div class="Header"> <!--This is the blue header section with the Vaccino title and text about the government-->
@@ -19,6 +16,7 @@
             for vaccine and innoculation information</h3> <!--Align Under Vaccino-->
         </div> <!--End of blue header section-->
           <!--need to sort out the table here-->
+          <div id ="table"></div>
           <script src="userPages.js"></script>
       </body>
 </html>
