--- a/src/registration.html
+++ b/src/registration.html
@@ -8,8 +8,7 @@
       </head>
       <body>
         <div class="Header"> <!--This is the blue header section with the Vaccino title and text about the government-->
-            <p>Ministry of
-                <br> Health</p>
+            <p>Ministry of Health</p> <!--Align left-->
           <h1>Vaccino - Sign Up</h1> <!--Align center-->
           <h3>The official New Zealand Government website<br>
             for vaccine and innoculation information</h3> <!--Align Under Vaccino-->
@@ -41,8 +40,9 @@
                     <input type="password" class="r" id = "password" name="password" required>
                     <br><br>
                     
-                    <label for="nhi">NHI Number (if known)</label>
-                    <input type ="text" id = 'nhi' name="nhi" placeholder="112233445">
+                    <label for="nhi">*NHI Number</label>
+                    <!--I made this input required as it breaks a lot of functions if it doesn't work.-->
+                    <input type ="text" id = 'nhi' name="nhi" placeholder="112233445" required>
                     <br><br>
 
                     <button type ="reset" id="reset">Reset</button>
