--- a/src/testResults.html
+++ b/src/testResults.html
@@ -62,8 +62,7 @@
       </head>
       <body>
         <div class="Header"> <!--This is the blue header section with the Vaccino title and text about the government-->
-          <p>Ministry of
-            <br> Health</p>
+          <p>Ministry ofHealth</p>
           <button type="button" id="signout">Sign Out</button>
           <button type="button" id="homebutton">Home</button>
           <h1>Vaccino</h1> <!--Align center-->
@@ -76,15 +75,15 @@
          <div class="container" id="myForm">
           
           <form class="popup">
-          <label for="date">Date of test</label>
+          <label for="date">Date of Test</label>
           <input id="date" type="date" name="date" placeholder="20-20-2022" required>
           <label for="location">Location at time of test</label>
           <input id="location" type="text" name="location" placeholder="Christchurch" required>
           <label for="Result">RAT Result</label>
           <input id="result" type="text" name="text" placeholder="negative" required>
           <br>
-          <button type="button" id="close" onclick="closeForm()">close</button>
-          <button type="button" id="submitResult" onclick="closeForm()">Submit result</button>
+          <button type="button" id="close" onclick="closeForm()">Close</button>
+          <button type="button" id="submitResult" onclick="closeForm()">Submit Result</button>
           </form>
         </div>
         <script>
