--- a/src/userProfile.html
+++ b/src/userProfile.html
@@ -4,12 +4,11 @@
         
         <link rel="stylesheet" href="userPages.css">
         <meta charset="UTF-8">
-        <title>Vaccino - Home</title>
+        <title>Vaccino - User Profile</title>
     </head>
     <body>
         <div class="Header"> <!--This is the blue header section with the Vaccino title and text about the government-->
-            <p>Ministry of
-                <br> Health</p>
+            <p>Ministry of Health</p>
             <button type="button" id="signout">Sign Out</button>
             <button type="button" id="homebutton">Home</button>
             <h1>Vaccino</h1> <!--Align center-->
