--- a/src/bugReport.html
+++ b/src/bugReport.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="userPages.css">
         <meta charset="UTF-8">
         <title>Vaccino - Report Issue</title>
       </head>
@@ -11,7 +11,6 @@
           <p>Ministry of Health</p> <!--Align left-->
           <br>
           <button type="button" id="signout">Sign Out</button>
-          <br>        <br>        <br>        <br>        <br>
           <button type="button" id="homebutton">Home</button>
           <h1>Vaccino - Report Issue</h1> <!--Align center-->
           <h3>The official New Zealand Government website<br>
