--- a/src/adminAddTests.html
+++ b/src/adminAddTests.html
@@ -40,7 +40,7 @@
         <button type="button" id="signout">Sign Out</button>
         <br>        <br>        <br>        <br>        <br>
         <button type="button" id="homebutton">Home</button>
-        <h1>Vaccino - Alert Levels</h1> <!--Align center-->
+        <h1>Vaccino - Add Test</h1> <!--Align center-->
         <h3>The official New Zealand Government website<br>
           for vaccine and innoculation information</h3> <!--Align Under Vaccino-->
         </div> <!--End of blue header section-->
@@ -56,8 +56,8 @@
             <label for="Result">RAT Result</label>
             <input id="result" type="text" name="text" placeholder="negative" required>
             <br>
-            <button type="button" id="close">close</button>
-            <button type="button" id="uploadResult">Submit test</button>
+            <button type="button" id="close" onclick="window.location.replace('adminrecords.html')">Close</button>
+            <button type="button" id="uploadResult">Submit Test</button>
         </form>
         <script src="adminPages.js"></script>
     </body>
