--- a/src/adminrecords.html
+++ b/src/adminrecords.html
@@ -18,20 +18,14 @@
           for vaccine and innoculation information</h3> <!--Align Under Vaccino-->
         </div> <!--End of blue header section-->
         <div id="adminrecords1">
-            <button type="button" class="adminButton2" onclick="window.location.replace('adminAddVaccine.html')">Change/Upload Vaccine Records</button> <!---->
+            <button type="button" class="adminButton" onclick="window.location.replace('adminAddVaccine.html')">Add Vaccine Record</button> <!---->
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <button type="button" class="adminButton2">View Vaccine Records</button> <!---->
-        </div>
+            <button type="button" class="adminButton" onclick="window.location.replace('adminAddTests.html')">Add Test Record</button> <!---->
+          </div>
         <div id="adminrecords2">
-          <button type="button" class="adminButton2">Delete Certificates</button> <!---->
+          <button type="button" class="adminButton">Delete Certificates</button> <!---->
           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          <button type="button" class="adminButton2">View Vaccine Certificates</button> <!---->
-        </div>
-        <div id="adminrecords3">
-          <button type="button" class="adminButton3" onclick="window.location.replace('adminAddTests.html')">Add Test</button> <!---->
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          <button type="button" class="adminButton2">View Vaccine Certificates</button> <!---->
-        </div>
+          <button type="button" class="adminButton">View Certificates</button> <!---->
         <script src="adminPages.js"></script>
     </body>
 </html>
