--- a/src/adminAddVaccine.html
+++ b/src/adminAddVaccine.html
@@ -40,7 +40,7 @@
         <button type="button" id="signout">Sign Out</button>
         <br>        <br>        <br>        <br>        <br>
         <button type="button" id="homebutton">Home</button>
-        <h1>Vaccino - Alert Levels</h1> <!--Align center-->
+        <h1>Vaccino - Add Vaccine</h1> <!--Align center-->
         <h3>The official New Zealand Government website<br>
           for vaccine and innoculation information</h3> <!--Align Under Vaccino-->
         </div> <!--End of blue header section-->
@@ -58,7 +58,7 @@
             <label for="date">Date vaccine was done on</label>
             <input id="date" type="date" name="date" placeholder="20-20-2022" required>
             <br>
-            <button type="button" id="close">close</button>
+            <button type="button" id="close" onclick="window.location.replace('adminrecords.html')">Close</button>
             <button type="button" id="upload">Add Vaccine Record</button>
         </form>
         <script src="adminPages.js"></script>
