Fixed sign up and other updates

--- a/src/testResults.html
+++ b/src/testResults.html
@@ -23,8 +23,8 @@
   font-size: 1.3em;
   color: #000000;
   font-family: 'Roboto', sans-serif;
-  top: 22rem;
-  position: absolute;
+  bottom: 10rem;
+  position: relative;
 }
 
 /* Add styles to the form container */
@@ -62,12 +62,12 @@
       </head>
       <body>
         <div class="Header"> <!--This is the blue header section with the Vaccino title and text about the government-->
-          <p>Ministry ofHealth</p>
+          <p>Ministry of <br>
+            Health</p>
           <button type="button" id="signout">Sign Out</button>
           <button type="button" id="homebutton">Home</button>
           <h1>Vaccino</h1> <!--Align center-->
-          <h3>The official New Zealand Government website<br>
-            for vaccine and innoculation information</h3> <!--Align Under Vaccino-->
+          <h3>Test Results</h3> <!--Align Under Vaccino-->
         </div> <!--End of blue header section-->
           <!--need to sort out the table here-->
          <div id ="table"></div>
