--- a/src/bugReport.html
+++ b/src/bugReport.html
@@ -8,7 +8,8 @@
       </head>
       <body>
         <div class="Header"> <!--This is the blue header section with the Vaccino title and text about the government-->
-          <p>Ministry of Health</p> <!--Align left-->
+          <p>Ministry of<br>
+             Health</p> <!--Align left-->
           <br>
           <button type="button" id="signout">Sign Out</button>
           <button type="button" id="homebutton">Home</button>
