--- a/src/vaccineRecords.html
+++ b/src/vaccineRecords.html
@@ -7,12 +7,12 @@
       </head>
       <body>
         <div class="Header"> <!--This is the blue header section with the Vaccino title and text about the government-->
-          <p>Ministry of Health</p>
+          <p>Ministry of<br>
+             Health</p>
           <button type="button" id="signout">Sign Out</button>
           <button type="button" id="homebutton">Home</button>
           <h1>Vaccino</h1> <!--Align center-->
-          <h3>The official New Zealand Government website<br>
-            for vaccine and innoculation information</h3> <!--Align Under Vaccino-->
+          <h3>Vaccine Records</h3> <!--Align Under Vaccino-->
         </div> <!--End of blue header section-->
           <!--need to sort out the table here-->
           <div id ="table"></div>
