user details function now done

--- a/src/userProfile.html
+++ b/src/userProfile.html
@@ -30,9 +30,9 @@
                     <div id="detailContent">
                         <P id="nTxt">name</P>
                         <p id="emailTxt">email</p>
-                        <p id="cellNumTxt">Add a number to the system</p>
-                        <p id="streetTxt">Add your address to the system</p>
-                        <p id="cityTxt">Add your address to the system</p>
+                        <p id="cellNumTxt">cell</p>
+                        <p id="streetTxt">street</p>
+                        <p id="cityTxt">city</p>
                         <p id="country">New Zealand</p>
                     </div>
                 </div>
