styled the user pages

--- a/src/testResults.html
+++ b/src/testResults.html
@@ -23,8 +23,8 @@
   font-size: 1.3em;
   color: #000000;
   font-family: 'Roboto', sans-serif;
-  bottom: 10rem;
-  position: relative;
+  top: 15rem;
+  position: absolute;
 }
 
 /* Add styles to the form container */
