--- a/src/bugReport.html
+++ b/src/bugReport.html
@@ -18,11 +18,10 @@
             for vaccine and innoculation information</h3> <!--Align Under Vaccino-->
         </div> <!--End of blue header section-->
         <div id="bugreport">
-          <p>Please enter your name and the issue you are having and then submit.</p>
+          <p id="bugreporttext">Please enter your name and the issue you are having and then submit.</p>
           <textarea style="resize: none;" id="bugreportinput" placeholder="I am having an issue..." required></textarea>
           <br>
           <button id="BugSubmit">Submit</button>
-          <button id="Temporary" onclick="window.location.replace('userHome.html')">Temporary Button</button>
         </div> 
         <script src="bugreport.js"></script>
         </body>
