--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,7 @@
       const electron = require("electron")
     </script>
     <div class="Header"> <!--This is the blue header section with the Vaccino title and text about the government-->
-      <p>Ministry of<br>
-         Health</p> <!--Align left-->
+      <p>Ministry of Health</p> <!--Align left-->
       <h1>Vaccino</h1> <!--Align center-->
       <h3>The official New Zealand Government website<br>
         for vaccine and innoculation information</h3> <!--Align Under Vaccino-->
@@ -55,9 +54,7 @@
       </ul>
     </div>
     <div class="images">
-      <img id="img1" src=".\images\BabyVaccine.jpg">
-      <img id="img2" src=".\images\ElderlyVaccine.jpg">
-      <img id="img3" src=".\images\Vaccination.jpg">
+      <img id="img1" src=".\images\Vaccinoimage2.svg">
     </div>
   </body>
 </html>
