--- a/src/registration.html
+++ b/src/registration.html
@@ -8,8 +8,7 @@
       </head>
       <body>
         <div class="Header"> <!--This is the blue header section with the Vaccino title and text about the government-->
-            <p>Ministry of <br>
-                Health</p> <!--Align left-->
+            <p>Ministry of Health</p> <!--Align left-->
           <h1>Vaccino - Sign Up</h1> <!--Align center-->
           <h3>The official New Zealand Government website<br>
             for vaccine and innoculation information</h3> <!--Align Under Vaccino-->
