--- a/src/userQrCode.html
+++ b/src/userQrCode.html
@@ -8,13 +8,17 @@
     </head>
     <body>
         <div class="Header"> <!--This is the blue header section with the Vaccino title and text about the government-->
-            <p>Ministry of<br>
-                 Health</p>
+            <p>Ministry of Health</p>
             <button type="button" id="signout">Sign Out</button>
             <button type="button" id="homebutton">Home</button>
             <h1>Vaccino</h1> <!--Align center-->
             <h3>QR Code</h3> <!--Align Under Vaccino-->
-          </div> <!--End of blue header section-->
+            <!--End of blue header section-->
+            <!--QR code location-->
+            </div>
+            <div id="QRcodeBox">
+                
+            </div>
           <script src="userPages.js"></script>
     </body>
 </html>
