--- a/src/admin.html
+++ b/src/admin.html
@@ -19,7 +19,7 @@
       <div id="adminhomebuttons">
         <button type="button" class="adminButton" id="profile">Manage User Profiles</button> <!---->
         <br>        <br>
-        <button type="button" class="adminButton" id="bugReports">Resolve Bug Reports</button> <!---->
+        <button type="button" class="adminButton" id="bugReports">Bug Reports</button> <!---->
         <br>        <br>
         <button type="button" class="adminButton" id="alert">Manage Alert Levels</button> <!---->
         <br>        <br>
