--- a/src/adminbugreports.html
+++ b/src/adminbugreports.html
@@ -37,7 +37,7 @@
             for (var i = 0; i < data.length; i++) {
                 var div = document.createElement("div");
                 div.innerHTML = '<div id = "newReport">' + 'Report ' + (i + 1) + ': ' + data[i].BugReport
-                 + '<br>' + '<button type="button" id="resolveButton">Resolve</button>' + '<br><br>' + '</div>';
+                 + '<br><br>' + '</div>';
                 mainContainer.appendChild(div);
             }
           }
