--- a/src/adminrecords.html
+++ b/src/adminrecords.html
@@ -13,7 +13,7 @@
         <button type="button" id="signout">Sign Out</button>
         <br>        <br>        <br>        <br>        <br>
         <button type="button" id="homebutton">Home</button>
-        <h1>Vaccino</h1> <!--Align center-->
+        <h1>Vaccino - Manage Certificates</h1> <!--Align center-->
         <h3>The official New Zealand Government website<br>
           for vaccine and innoculation information</h3> <!--Align Under Vaccino-->
         </div> <!--End of blue header section-->
@@ -22,10 +22,6 @@
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <button type="button" class="adminButton" onclick="window.location.replace('adminAddTests.html')">Add Test Record</button> <!---->
           </div>
-        <div id="adminrecords2">
-          <button type="button" class="adminButton">Delete Certificates</button> <!---->
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          <button type="button" class="adminButton">View Certificates</button> <!---->
         <script src="adminPages.js"></script>
     </body>
 </html>
