--- a/src/userProfile.html
+++ b/src/userProfile.html
@@ -8,8 +8,7 @@
     </head>
     <body>
         <div class="Header"> <!--This is the blue header section with the Vaccino title and text about the government-->
-            <p>Ministry of<br>
-                 Health</p>
+            <p>Ministry of Health</p>
                 <button type="button" id="signout">Sign Out</button>
                 <button type="button" id="homebutton">Home</button>
             <h1>Vaccino</h1> <!--Align center-->
@@ -21,8 +20,8 @@
                 <h1 id="cNhi">NHI</h1>
             </div>
             <div id="innerBox">
-                <div id="QRcodeBox">
-                    <!--QR STUFF GOES IN HERE-->
+                <div id="QRcodeBox2">
+                    
                 </div>
                 <div id="detailsBox">
                     <h2>Your Details</h2>
