some css tweaks

--- a/src/testResults.html
+++ b/src/testResults.html
@@ -19,7 +19,7 @@
 #upload {
   background-color: #A6F5FF;
     border: 2px solid #89CFF0;
-  right: 35rem;
+  right: 50%;
   font-size: 1.3em;
   color: #000000;
   font-family: 'Roboto', sans-serif;
@@ -70,7 +70,7 @@
           <h3>Test Results</h3> <!--Align Under Vaccino-->
         </div> <!--End of blue header section-->
           <!--need to sort out the table here-->
-         <div id ="table"></div>
+         <div id ="table" style="width: 46.87rem; left: 30%;"></div>
          <button type="button" id="upload" onclick="openForm()">Upload RAT Result</button>
          <div class="container" id="myForm">
           
