--- a/src/vaccineRecords.html
+++ b/src/vaccineRecords.html
@@ -15,7 +15,7 @@
           <h3>Vaccine Records</h3> <!--Align Under Vaccino-->
         </div> <!--End of blue header section-->
           <!--need to sort out the table here-->
-          <div id ="table"></div>
+          <div id ="table"  style="width: 46.87rem; left: 30%;"></div>
           <script src="userPages.js"></script>
       </body>
 </html>
