Final edits and fixes

--- a/src/userHome.html
+++ b/src/userHome.html
@@ -9,7 +9,8 @@
       </head>
       <body>
         <div class="Header"> <!--This is the blue header section with the Vaccino title and text about the government-->
-          <p>Ministry of Health</p>
+          <p>Ministry of<br>
+            Health</p>
             <button type="button" id="signout">Sign Out</button>
             <h1>Vaccino</h1> <!--Align center-->
             <h3>The official New Zealand Government website<br>
