--- a/src/userProfile.html
+++ b/src/userProfile.html
@@ -8,7 +8,8 @@
     </head>
     <body>
         <div class="Header"> <!--This is the blue header section with the Vaccino title and text about the government-->
-            <p>Ministry of Health</p>
+            <p>Ministry of<br>
+                Health</p>
                 <button type="button" id="signout">Sign Out</button>
                 <button type="button" id="homebutton">Home</button>
             <h1>Vaccino</h1> <!--Align center-->
